--- a/greetings.html
+++ b/greetings.html
@@ -24,7 +24,7 @@
             flex-direction: column;
             max-width: 95%;
             margin: auto;
-            border: 3px solid #000000;
+            border: 3px solid #FFFFFF;
             border-radius: 5px;
             box-shadow: 2px 2px 1px 0px ##808080;
 
